wip: fleshed out care team, first try at paging
